# xplane_hla

./: CMakeLists.txt  README.md
fom/: isae_prise_hla1516e.xml
src/test_federate/: testFederate.cc
src/xplane_hla_plugin/: RemoteAircraftToDraw.cc  RemoteAircraftToDraw.hh  XplaneFederateHla1516e.cc  XplaneFederateHla1516e.hh  XplaneFederateHla1516ePlugin.cc
